# qc-otx

./: README.md  checker_bundle_doc.md  main.py  pyproject.toml  requirements.txt
manifest_templates/: linux_manifest.json  windows_otx_manifest.json
qc_otx/: __init__.py  __main__.py  constants.py  main.py
qc_otx/checks/: __init__.py  models.py  utils.py
qc_otx/checks/core_checker/: __init__.py  core_checker.py  core_constants.py  document_name_matches_filename.py  document_name_package_uniqueness.py  have_specification_if_no_realisation_exists.py  mandatory_constant_initialization.py  match_of_imported_document_data_model_version.py  no_dead_import_links.py  no_unused_imports.py  no_use_of_undefined_import_prefixes.py  public_main_procedure.py  unique_node_names.py
qc_otx/checks/data_type_checker/: __init__.py  accessing_structure_elements.py  correct_target_for_structure_element.py  data_type_checker.py  data_type_constants.py
qc_otx/checks/state_machine_checker/: __init__.py  distinguished_initial_and_completed_state.py  mandatory_target_state.py  mandatory_transition.py  mandatory_trigger.py  models.py  no_procedure_realization.py  no_target_state_for_completed_state.py  state_machine_checker.py  state_machine_constants.py  utils.py
qc_otx/checks/zip_file_checker/: __init__.py  type_safe_unzip_file.py  type_safe_zip_file.py  zip_file_checker.py  zip_file_constants.py
tests/: test_core_checks.py  test_data_type_checks.py  test_state_machine_checks.py  test_utils.py  test_zip_file_checks.py
tests/data/Core_Chk001/: Core_Chk001_negative.otx  (+1 more)
(+46 files in other folders)
